# Entity-Resolution-Agent-with-Contextual-Understanding-using-Graph-Neural-Networks.

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
src/entity_resolution/: __init__.py
src/entity_resolution/api/: __init__.py  main.py
src/entity_resolution/core/: __init__.py  beneficial_ownership.py  contextual_reasoning.py  decision_engine.py  entities.py  entity_extractor.py  entity_normalizer.py  graph_db.py  string_matcher.py
src/entity_resolution/models/: __init__.py  gnn_models.py
tests/: test_entity_normalizer.py
